--- a/project/package.json
+++ b/project/package.json
@@ -18,6 +18,7 @@
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.2.0",
     "@angular/material": "^16.2.11",
+    "@angular/material-moment-adapter": "^17.1.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
@@ -25,6 +26,7 @@
     "@popperjs/core": "^2.11.6",
     "angular-calendar": "^0.31.0",
     "bootstrap": "^5.2.3",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
